tests/parser/errors/if_do.ray
if true do var a = 1
if false { print "oui" } else var a = 1
